tests/ui/g-dynamic-policy-unsupported-control.stderr
error[E0599]: the method `policy` exists for struct `Program<hibana::g::Send<Role<0>, Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<124>, (), PolicyAnnotateKind>>>`, but its trait bounds were not satisfied
  --> tests/ui/g-dynamic-policy-unsupported-control.rs:58:6
   |
13 |   struct PolicyAnnotateKind;
   |   ------------------------- doesn't satisfy `PolicyAnnotateKind: DecisionPolicyControlKind`
...
48 |       let program = g::send::<
   |  ___________________-
49 | |         Role<0>,
50 | |         Role<0>,
51 | |         Msg<
...  |
57 | |     >()
58 | |     .policy::<7>();
   | |     -^^^^^^ method cannot be called due to unsatisfied trait bounds
   | |_____|
   |
   |
   = note: the following trait bounds were not satisfied:
           `PolicyAnnotateKind: DecisionPolicyControlKind`
note: the trait `DecisionPolicyControlKind` must be implemented
  --> src/control/cap/resource_kinds.rs
   |
   | / pub trait DecisionPolicyControlKind:
   | |     ControlResourceKind + decision_policy_control_kind::Sealed
   | |______________________________________________________________^
